<?xml version="1.0"?>
<package>
  <name>archie_launch</name>
  <version>0.0.1</version>
  <description>The archie_launch package</description>
  <maintainer email="mainprice@gmail.com">Jim Mainprice</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>catkin</run_depend>
  <!-- <build_depend>gazebo</build_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>